--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="col">
                 <div id="root" :class="changecolorclass" class="text-center p-2">
                     <h1> {{ title }} </h1>
-                    <button @click="changecolor">Click</button>
+                    <button @click="changecolor" :class="changecolorclassbtn">Click</button>
                 </div>
             </div>
         </div>
