--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="root">
         <div class="row">
             <div class="col">
-                <div id="root" :class="changecolorclass" class="text-center p-2">
+                <div :class="colorclass" class="text-center p-2">
                     <h1> {{ title }} </h1>
-                    <button @click="changecolor" :class="changecolorclassbtn">Click</button>
+                    <button @click="changecolorclass" :class="colorclassbtn">Click</button>
                 </div>
             </div>
         </div>
+        <div class="d-flex" :class="justify">
+            <img :src="img" :class="width">
+        </div>
+         
     </div>
     
 
